--- a/css/index.css
+++ b/css/index.css
@@ -1,135 +1,344 @@
-body{
-	margin: 0px;
-	
+.navigationator {
+  font-size: 15px;
+  font-family: #454A59;
 }
-
-.hero{
-    background-image: url('../img/vegetables.jpg'); 
-    background-size: cover;
-    background-position: center center;
-    position: relative;
-    height: 100vh;
-    top: 0;
-    bottom: 0;
-    z-index: -10;
+.paragraphmix {
+  padding: 15px;
 }
-
-.overlay{
-    position: absolute;
-    background-color: rgba(0,0,0,0.5);
-    top: 0;
-    bottom: 0;
-    height: 100%;
-    width: 100%;
-    z-index: -5;
+.noneya {
+  display: none;
 }
-
-.logo{
-	opacity: 0.7;
+/* http://meyerweb.com/eric/tools/css/reset/ 
+   v2.0 | 20110126
+   License: none (public domain)
+*/
+html,
+body,
+div,
+span,
+applet,
+object,
+iframe,
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+p,
+blockquote,
+pre,
+a,
+abbr,
+acronym,
+address,
+big,
+cite,
+code,
+del,
+dfn,
+em,
+img,
+ins,
+kbd,
+q,
+s,
+samp,
+small,
+strike,
+strong,
+sub,
+sup,
+tt,
+var,
+b,
+u,
+i,
+center,
+dl,
+dt,
+dd,
+ol,
+ul,
+li,
+fieldset,
+form,
+label,
+legend,
+table,
+caption,
+tbody,
+tfoot,
+thead,
+tr,
+th,
+td,
+article,
+aside,
+canvas,
+details,
+embed,
+figure,
+figcaption,
+footer,
+header,
+hgroup,
+menu,
+nav,
+output,
+ruby,
+section,
+summary,
+time,
+mark,
+audio,
+video {
+  margin: 0;
+  padding: 0;
+  border: 0;
+  font-size: 100%;
+  font: inherit;
+  vertical-align: baseline;
 }
-
-nav ul{
-	display: flex;
-	align-items: center;
-	justify-content: space-around;
+/* HTML5 display-role reset for older browsers */
+article,
+aside,
+details,
+figcaption,
+figure,
+footer,
+header,
+hgroup,
+menu,
+nav,
+section {
+  display: block;
 }
-
-nav a{
-	text-decoration: none;
-	color: white;
+body {
+  line-height: 1;
 }
-
-.head-content{
-	display: flex;
-	flex-direction: row;
-	margin-left: 20px;
+ol,
+ul {
+  list-style: none;
 }
-
-.first-content p{
-	text-align: left;
+blockquote,
+q {
+  quotes: none;
 }
-
-.bottom-content{
-	text-align: left;
+blockquote:before,
+blockquote:after,
+q:before,
+q:after {
+  content: '';
+  content: none;
 }
-
-.header-right{
-	width: 49%;
+table {
+  border-collapse: collapse;
+  border-spacing: 0;
 }
-
-.header-right img{
-  float: right;
-  margin: 50px 0;
+* {
+  box-sizing: border-box;
 }
-
-.header-right:after{
-  content: "";
-  clear: both;
-  display: table;
+html {
+  font-size: 62.5%;
 }
-
-.header-left {
-	display: flex;
-	flex-direction: column;
-	width: 50%;
-	vertical-align: top;
-	padding: 75px;
-	text-align: center;
+html,
+body {
+  font-family: 'Ubuntu', sans-serif;
+  color: #5E6164;
 }
-
-.header-left button{
-	background: solid;
-	padding: 7px 45px;
+h1,
+h2,
+h3,
+h4,
+h5 {
+  font-family: 'Russo One', sans-serif;
+  color: #23293B;
 }
-
-button a{
-	text-decoration: none;
-	color: black;
+h2 {
+  font-size: 3.2rem;
 }
- 
-footer {
-	padding: 20px 0 50px;
-	text-align: center;
-	color: white;
+h3 {
+  font-size: 2.8rem;
 }
-
-section{
-	padding: 40px 0;
+p {
+  font-size: 1.6rem;
+  line-height: 1.4;
 }
-
-header h1{
-	font-size: 4.5em;
+.container {
+  max-width: 800px;
+  width: 100%;
+  margin: 0 auto;
 }
-
-.bottom-content{
-	display: flex;
-	flex-direction: column;
-	padding: 30px;
-}	
-
-.middle-content {
-  padding: 40px 0;
-}
-
-.first-content{
+.intro {
   display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  align-items: center;
+  max-width: 100%px;
+  margin-top: 20px;
+  background-color: #F6F6F6;
 }
-
-.top-content{
-	margin-bottom: 10px;
-	margin-right: 10px;
-	padding: 32px;
-	display: flex;
-	flex-direction: column;
-
+@media (max-width: 500px) {
+  .intro {
+    display: flex;
+    flex-direction: column;
+    padding-top: 15px;
+    padding-bottom: 8px;
+  }
 }
-
-.content-two{
-	display: flex;
-	
+.intro h1 {
+  font-size: 50px;
+  margin-bottom: 10px;
+  margin-top: 20px;
+  width: auto;
 }
-
-.bottom-content{
-	
+.intro .navlinks {
+  align-items: center;
+  margin: 20px 0 0;
+  margin-top: 20px;
+  margin-bottom: 20px;
 }
-
+.intro a {
+  text-decoration: none;
+  font-size: 15px;
+  font-family: #454A59;
+  color: #23293B;
+  padding-right: 20px;
+}
+@media (max-width: 500px) {
+  .intro a {
+    font-size: 15px;
+    font-family: #454A59;
+  }
+}
+footer {
+  color: #22283B;
+  background: #f4f4f4;
+  padding: 20px 0;
+  border: 1px double #e0e0e0;
+  border-radius: 10px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.home .lemon-head .lemon {
+  border-radius: 10px;
+  width: 100%;
+}
+@media (max-width: 500px) {
+  .home .lemon-head .lemon {
+    width: 100%;
+  }
+}
+.home .lemon-head h2 {
+  padding: 15px;
+}
+.home .lemon-head p {
+  padding: 15px;
+}
+.home .food-images {
+  display: flex;
+  flex-wrap: wrap;
+  width: 100%;
+}
+.home .food-images img {
+  width: 28%;
+  margin: 20px 2.5%;
+  border-radius: 20px;
+  height: 100%;
+}
+@media (max-width: 500px) {
+  .home .food-images .sky {
+    display: none;
+  }
+  .home .food-images .launch {
+    display: none;
+  }
+  .home .food-images .blast {
+    width: 100%;
+    margin: 20px 2.5%;
+  }
+}
+.home .all-family {
+  padding: 15px;
+}
+@media (max-width: 500px) {
+  .home .all-family {
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+    margin: 20px 2.5%;
+  }
+}
+.home .all-family h3 {
+  margin-top: 11px;
+}
+.home p {
+  margin-top: 13px;
+}
+.memory {
+  margin-top: 60px;
+  border-top: 1px solid #dee2e6;
+  padding: 50px 60px;
+  display: flex;
+  justify-content: center;
+}
+@media (max-width: 500px) {
+  .memory {
+    flex-direction: column-reverse;
+    margin-top: 15px;
+    padding: 15px 5%;
+  }
+}
+.memory .memory-text {
+  width: 50%;
+}
+@media (max-width: 500px) {
+  .memory .memory-text {
+    width: 100%;
+    margin-top: 15px;
+  }
+}
+.memory .memory-text h3 {
+  margin-bottom: 10px;
+}
+.memory .memory-text p {
+  margin-bottom: 26px;
+}
+.memory .memory-text .btn {
+  background: #23293B;
+  color: white;
+  font-size: 2rem;
+  cursor: pointer;
+  border-radius: 5px;
+  padding: 5px 10px;
+  width: 30%;
+  text-align: center;
+}
+.memory .memory-text .btn:hover {
+  background: white;
+  color: #23293B;
+  border: 1px solid #23293B;
+}
+@media (max-width: 500px) {
+  .memory .memory-text .btn {
+    width: 100%;
+    padding: 20px 0;
+  }
+}
+.memory .apple-pie {
+  width: 46%;
+  margin-left: 4%;
+}
+@media (max-width: 500px) {
+  .memory .apple-pie {
+    width: 100%;
+    margin-left: 0;
+  }
+}
+.memory .apple-pie img {
+  width: 100%;
+  height: auto;
+  border-radius: 10px;
+}
