--- a/less/index.less
+++ b/less/index.less
@@ -1,102 +1,10 @@
-body {
-    margin:0px;
-  }
-  .hero {
-    background-image:url('../img/vegetables.jpg');
-    background-size:cover;
-    background-position:center center;
-    position:relative;
-    height:100vh;
-    top:0;
-    bottom:0;
-    z-index:-10;
-  }
-  .overlay {
-    position:absolute;
-    background-color:rgba(0,0,0,0.5);
-    top:0;
-    bottom:0;
-    height:100%;
-    width:100%;
-    z-index:-5;
-  }
-  .logo {
-    opacity:0.7;
-  }
-  nav ul {
-    display:flex;
-    align-items:center;
-    justify-content:space-around;
-  }
-  nav a {
-    text-decoration:none;
-    color:white;
-  }
-  .head-content {
-    display:flex;
-    flex-direction:row;
-    margin-left:20px;
-  }
-  .first-content {
-    display:flex;
-    p {
-      text-align:left;
-    }
-  }
-  .bottom-content {
-    text-align:left;
-    display:flex;
-    flex-direction:column;
-    padding:30px;
-  }
-  .header-right {
-    width:49%;
-    img {
-      float:right;
-      margin:50px 0;
-    }
-  }
-  .header-right:after {
-    content:"";
-    clear:both;
-    display:table;
-  }
-  .header-left {
-    display:flex;
-    flex-direction:column;
-    width:50%;
-    vertical-align:top;
-    padding:75px;
-    text-align:center;
-    button {
-      background:solid;
-      padding:7px 45px;
-    }
-  }
-  button a {
-    text-decoration:none;
-    color:black;
-  }
-  footer {
-    padding:20px 0 50px;
-    text-align:center;
-  }
-  section {
-    padding:40px 0;
-  }
-  header h1 {
-    font-size:4.5em;
-  }
-  .middle-content {
-    padding:40px 0;
-  }
-  .top-content {
-    margin-bottom:10px;
-    margin-right:10px;
-    padding:32px;
-    display:flex;
-    flex-direction:column;
-  }
-  .content-two {
-    display:flex;
-  }
+// Import your less files here:
+
+@import "variables.less";
+@import "mixins.less";
+@import "reset.less";
+@import "global.less";
+@import "navigation.less";
+@import "footer.less";
+@import "home-page.less";
+
