worked what i could on the about page. heart wasnt in the lameness of this side of the project tbh

--- a/css/index.css
+++ b/css/index.css
@@ -144,7 +144,7 @@ html {
 }
 html,
 body {
-  font-family: 'Ubuntu', sans-serif;
+  font-family: 'Yeon-Sung', sans-serif;
   color: #5E6164;
 }
 h1,
@@ -152,7 +152,7 @@ h2,
 h3,
 h4,
 h5 {
-  font-family: 'Russo One', sans-serif;
+  font-family: 'Yeon-Sung', sans-serif;
   color: #23293B;
 }
 h2 {
