--- a/less/home-page.less
+++ b/less/home-page.less
@@ -73,6 +73,12 @@
       margin-top: 13px;
       
     }
+
+    h2{
+      margin-top: 40px;
+    }
+
+   
   }
 
   
@@ -127,3 +133,119 @@
     }
   }
 
+  
+  .bottom-content{
+    display: flex;
+    margin: 0 2% 20px;
+    justify-content: space-around;
+    .text-container{
+      padding-right: 4%;
+      .text-container:last-child {
+        padding-right: 0;
+    }
+  }
+}
+
+.top-img{
+  width: 800px;
+  height: 100px;
+}
+
+
+.middle-content {
+  margin-bottom: 20px;
+  border-bottom: 1px dashed black;
+  h2 {
+    padding: 0 2%;
+    margin-bottom: 0;
+    margin-top: 20px;
+    .boxes{
+      display: flex;
+      flex-wrap: wrap;
+      justify-content: space-evenly;
+      .box{
+        width: 12.5%;
+        height: 100px;
+        margin: 20px 2.5%;
+        color: white;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+    }
+  }
+ }
+}
+
+h1, h2, h3, h4, h5 {
+  font-size: 18px;
+  margin-bottom: 15px;
+  font-family: 'Yeon Sung', sans-serif;
+}
+
+p{
+  line-height: 1.4;
+}
+
+.middle-content {
+	border-bottom: 1px dashed black;
+	margin-bottom: 20px;
+	.boxes {
+		display: flex;
+		flex-wrap: wrap;
+		justify-content: space-evenly;
+		.box {
+			align-items: center;
+			color: white;
+			display: flex;
+			height: 100px;
+			justify-content: center;
+			margin: 20px 2.5%;
+			width: 12.5%;
+		}
+		.box1{
+      .bounce();
+			background: teal;
+		
+		}
+		.box2 {
+		  .jello();
+			background: gold;
+			
+		}
+		.box3 {
+		  .bounce();
+			background: cadetblue;
+			
+		}
+		.box4 {
+			.jello();
+			background: coral;
+			
+		}
+		.box5 {
+		  .bounce();
+			background: crimson;
+			
+		}
+		.box6 {
+			.jello();
+			background: forestgreen;
+		}
+		.box7 {
+			.bounce();
+			background: darkorchid;
+		}
+		.box8 {
+			.jello();
+			background: hotpink;
+		}
+		.box9 {
+		  .bounce();
+			background: indigo;
+		}
+		.box10 {
+			.jello();
+			background: dodgerblue;
+		}
+}
+}
