--- a/less/home-page.less
+++ b/less/home-page.less
@@ -176,7 +176,7 @@
  }
 }
 
-h1, h2, h3, h4, h5 {
+h1, h2, h3, h4, h5, p {
   font-size: 18px;
   margin-bottom: 15px;
   font-family: 'Yeon Sung', sans-serif;
